Fix post content overflows comment section

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,7 +139,7 @@ nav ul li {
 /* -- Content -- */
 
 .content {
-  max-height: 900px;
+  min-height: 900px;
 
   .main-content {
     padding-right: 40px;
